--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -7,9 +7,9 @@
 }
 
 .btn-primary:hover {
-  color: #fff;
-  background-color: #399d0a;
-  border-color: #399d0a;
+  color: #f9f9f9;
+  background-color: #558B2F;
+  border-color: #558B2F;
 }
 
 @media (max-width: 400px) {
@@ -52,13 +52,13 @@
 
 @media (max-width: 768px) {
   #headerbox {
-    margin: 0px;
+    margin-top: 0px;
   }
 }
 
 .btn-primary {
   color: #000000;
-  background-color: #ffffff;
+  background-color: #f9f9f9;
   border-color: #ffffff;
 }
 
@@ -89,10 +89,321 @@
 }
 
 .intro {
-  width: 80%;
+  width: 100%;
 }
 
 .nav-item {
-  margin: 0px 25px;
+  margin: 0px 13px;
+}
+
+.form-control {
+  display: block;
+  width: 100%;
+  height: calc(1.5em + .75rem + 2px);
+  padding: 20px 15px;
+  font-size: 1rem;
+  font-weight: 400;
+  line-height: 1.5;
+  color: #000000;
+  background-color: #f9f9f9;
+  background-clip: padding-box;
+  border: 1px solid #ced4da;
+  border-radius: 10px;
+  transition: border-color .15s ease-in-out,box-shadow .15s ease-in-out;
+  border-color: #d5d5d5;
+  font-family: 'Montserrat';
+}
+
+.btn-primary.focus, .btn-primary:focus {
+  color: #000000;
+  background-color: #f9f9f9;
+  border-color: #558B2F;
+  box-shadow: 0 0 0 .2rem rgba(35,103,3,0);
+}
+
+.btn-primary:not(:disabled):not(.disabled).active, .btn-primary:not(:disabled):not(.disabled):active, .show > .btn-primary.dropdown-toggle {
+  color: #ffffff;
+  background-color: #558B2F;
+  border-color: rgba(35,103,3,0);
+}
+
+.btn-primary:not(:disabled):not(.disabled).active:focus, .btn-primary:not(:disabled):not(.disabled):active:focus, .show > .btn-primary.dropdown-toggle:focus {
+  box-shadow: 0 0 0 .2rem rgba(81,255,38,0.5);
+}
+
+.form-control:focus {
+  color: #495057;
+  background-color: #fff;
+  border-color: #236703;
+  outline: 0;
+  box-shadow: 0 0 0 .2rem rgba(97,255,0,0.25);
+}
+
+.footer-basic ul {
+  padding: 0;
+  list-style: none;
+  text-align: center;
+  font-size: 18px;
+  line-height: 1.6;
+  margin-bottom: 0;
+}
+
+.footer-basic li {
+  padding: 0 10px;
+}
+
+.footer-basic ul a {
+  color: inherit;
+  text-decoration: none;
+  opacity: 0.8;
+}
+
+.footer-basic ul a:hover {
+  opacity: 1;
+}
+
+.footer-basic .social {
+  text-align: center;
+  padding-bottom: 25px;
+}
+
+.footer-basic .social > a {
+  font-size: 24px;
+  width: 40px;
+  height: 40px;
+  line-height: 40px;
+  display: inline-block;
+  text-align: center;
+  border-radius: 50%;
+  border: 1px solid #ccc;
+  margin: 0 8px;
+  color: inherit;
+  opacity: 0.75;
+}
+
+.footer-basic .social > a:hover {
+  opacity: 0.9;
+}
+
+.footer-basic .copyright {
+  margin-top: 15px;
+  text-align: center;
+  font-size: 13px;
+  color: #aaa;
+  margin-bottom: 0;
+}
+
+.features-boxed {
+  color: #313437;
+  background-color: #eef4f7;
+}
+
+.features-boxed p {
+  color: #7d8285;
+}
+
+.features-boxed h2 {
+  font-weight: bold;
+  margin-bottom: 40px;
+  padding-top: 40px;
+  color: inherit;
+}
+
+@media (max-width:767px) {
+  .features-boxed h2 {
+    margin-bottom: 25px;
+    padding-top: 25px;
+    font-size: 24px;
+  }
+}
+
+.features-boxed .intro {
+  font-size: 16px;
+  max-width: 500px;
+  margin: 0 auto;
+}
+
+.features-boxed .intro p {
+  margin-bottom: 0;
+}
+
+.features-boxed .features {
+  padding: 50px 0;
+}
+
+.features-boxed .item {
+  text-align: center;
+}
+
+.features-boxed .item .box {
+  text-align: center;
+  padding: 30px;
+  background-color: #fff;
+  border-radius: 18px;
+}
+
+.features-boxed .item .icon {
+  font-size: 60px;
+  color: #399d0a;
+  margin-top: 20px;
+  margin-bottom: 35px;
+}
+
+.features-boxed .item .name {
+  font-weight: bold;
+  font-size: 18px;
+  margin-bottom: 8px;
+  margin-top: 0;
+  color: inherit;
+}
+
+.features-boxed .item .description {
+  font-size: 15px;
+  margin-top: 15px;
+  margin-bottom: 20px;
+}
+
+@media (min-width: 340px) {
+  .box {
+    height: 360px;
+  }
+}
+
+@media (min-width: 576px) {
+  .box {
+    height: 385px;
+  }
+}
+
+@media (min-width: 1200px) {
+  .box {
+    height: 319px;
+  }
+}
+
+.item {
+  margin-top: 5px;
+  margin-bottom: 5px;
+}
+
+@media (max-width: 576px) {
+  .box {
+    max-width: 90%!important;
+  }
+}
+
+@media (max-width: 767px) {
+  .box {
+    max-width: 60%;
+  }
+}
+
+.box {
+  background: #ffffff;
+  border-radius: 15px;
+  margin: 32px 0px;
+}
+
+.description {
+  margin-top: 16px;
+  font-size: 15px;
+  color: #7d8285;
+  width: 90%;
+}
+
+.ozellikler {
+  font-size: 60px;
+  color: #558B2F;
+  margin-top: 37px;
+  margin-bottom: 35px;
+}
+
+@media (min-width: 768px) {
+  .footer-basic {
+    margin: 30px 40px;
+    border-radius: 35px;
+    padding-top: 20px;
+    padding-bottom: 20px;
+  }
+}
+
+@media (max-width: 768px) {
+  .footer-basic {
+    margin-top: 30px;
+    margin-left: 0px;
+    margin-right: 0px;
+    margin-bottom: 0px;
+    border-radius: 35px 35px 0px 0px;
+    padding-top: 20px;
+    padding-bottom: 20px;
+  }
+}
+
+.form-control {
+  margin: 5px 0px;
+}
+
+@media (min-width: 992px) {
+  .contact {
+    width: 50%;
+  }
+}
+
+@media (max-width: 992px) {
+  .contact {
+    width: 100%;
+  }
+}
+
+@media (min-width: 768px) {
+  .loraxtext {
+    font-size: 26px;
+  }
+}
+
+@media (max-width: 768px) {
+  .loraxtext {
+    font-size: 20px;
+  }
+}
+
+.urunumuz {
+  border-radius: 26px;
+  margin-bottom: 00px;
+  margin-top: 00px;
+  max-height: 600px;
+}
+
+@media (max-width: 767px) {
+  .urunumuzdiv {
+    padding: 5px;
+  }
+}
+
+@media (min-width: 768px) {
+  .urunumuzdiv {
+    padding: 42px;
+  }
+}
+
+@media (min-width: 768px) {
+  .nav-item.flag {
+    margin-left: 0px!important;
+  }
+}
+
+@media (max-width: 768px) {
+  .nav-item.flag {
+    margin-left: 15px!important;
+  }
+}
+
+.row {
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+  flex-wrap: wrap;
+  margin-right: 0px;
+  margin-left: 0px;
 }
 
